# blazefuck

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/: hello.b
src/: interact.rs  interpreter.rs  lib.rs  main.rs  tokens.rs
