[package]
name = "blazefuck"
version = "1.0.0"
edition = "2021"
description = "A blazingly-fast (interactive) Brainfuck interpreter."
readme = "README.md"
repository = "https://github.com/poopsicles/blazefuck"
license = "MIT"
keywords = ["brainfuck"]
categories = ["command-line-utilities", "compilers"]

[dependencies]
clap = { version = "3.1.17", features = ["derive"] }
anyhow = "1.0.57"